--- a/base.css
+++ b/base.css
@@ -46,7 +46,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+body {
+    background-color: black;
+}
 
 /* Center the container */
 #container {
